--- a/index.html
+++ b/index.html
@@ -1,12 +1,195 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"/>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css">
+  <link rel="stylesheet" type="text/css" href="css/styles.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,500&display=swap"
+      rel="stylesheet">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/js/all.min.js"
+      integrity="sha512-rpLlll167T5LJHwp0waJCh3ZRf7pO6IT1+LZOhAyP6phAirwchClbTZV3iqL3BMrVxIYRbzGTpli4rfxsCK6Vw=="
+      crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <title>Instagram feed</title>
 </head>
+
 <body>
+  <div class="container-fluid">
+      <!-- navbar -->
+      <div class="container-fluid navbar-light bg-light p-0">
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+          <div class="container-fluid ">
+            <nav class="navbar navbar-light bg-light p-0">
+              <div class="container-fluid">
+                <a class="navbar-brand" href="#">
+                  <i class="fa-brands fa-instagram"></i>
+                  Instagram
+                </a>
+              </div>
+            </nav>
+            <!-- create new -->
+            <!-- Button trigger modal -->
+            <nav class="navbar navbar-light bg-light ">
+              <!-- Button trigger modal -->
+              <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#createModal">
+                Create new post
+              </button>
+              <!-- Modal -->
+              <div class="modal fade" id="createModal" tabindex="-1" aria-labelledby="createModalLabel"
+                aria-hidden="true">
+                <div class="modal-dialog">
+                  <div class="modal-content">
+                    <div class="modal-header">
+                      <h5 class="modal-title" id="createModalLabel">Create a new post</h5>
+                      <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                      <div class="form-group">
+                        <label for="createCaption">Caption:</label>
+                        <textarea class="form-control" id="textCaption" rows="3" name="createCaption"></textarea>
+                      </div>
+                    </div>
+                    <div class="modal-footer">
+                      <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                      <button type="button" class="btn btn-primary">Save changes</button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <!-- dropdown -->
+              <div class="btn-group">
+                <button type="button" class="btn btn-secondary dropdown-toggle" style="margin-left: 5px;"
+                  data-bs-toggle="dropdown" data-bs-display="static" aria-expanded="false">
+                  <i class="fa-regular fa-gear"></i>
+                </button>
+                <ul class="dropdown-menu dropdown-menu-sm-end">
+                  <li><a class="dropdown-item" href="#">Profile</a></li>
+                  <li><a class="dropdown-item" href="#">Accesibility</a></li>
+                  <li><a class="dropdown-item" href="#">Privacy & Data</a></li>
+                  <li>
+                    <hr class="dropdown-divider">
+                  </li>
+                  <li><a class="dropdown-item text-danger" href="#">Log Out<output></output></a></li>
+                </ul>
+              </div>
+            </nav>
+          </div>
+        </nav>
+      </div>
+
+      <!-- iconos gallery y Feed -->
+      <div class="container ">
+        <nav class="navbar justify-content-center p-1">
+          <i class="fas fa-square text-primary"></i>
+        </nav>
+      </div>
+
     
+      <!-- feed instagram post -->
+      <div class="container-fluid collapsein" id="feed">
+        <div class="row ">
+          <div class="card-group d-flex justify-content-center">
+            <div class="col-8 my-2 px-2">
+              <div class="card align-self-center instagram-post-card">
+                <div class="card-header d-flex justify-content-between align-items-center py-3 px-3 text-center">
+                  <div><h4>My first post!</h4></div>
+                  <div><span class="date">15/12</span></div>
+                </div>
+                <img class="card-img-top" src="https://loremflickr.com/320/240" alt="Card image">
+                <div class="card-body">
+                 <p class="card-text">
+                  <p><strong>204 Likes</strong></p>Quo neque error repudiandae fuga? Ipsa laudantium molestias eos 
+                    sapiente officiis modi at sunt excepturi expedita sint? Sed quibusdam
+                    recusandae alias error harum maxime adipisci amet laborum.There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
+                </div>
+             </div>
+            </div>
+            <div class="col-8 my-2 px-2">
+              <div class="card align-self-center instagram-post-card">
+                <div class="card-header d-flex justify-content-between align-items-center py-3 px-3 text-center">
+                  <div><h4>One more post!</h4></div>
+                  <div><span class="date">18/12</span></div>
+                </div>
+                <img class="card-img-top" src="https://picsum.photos/320/240" alt="Card image">
+                <div class="card-body">
+                 <p class="card-text">
+                  <p><strong>290 Likes</strong></p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. </p>
+                </div>
+             </div>
+            </div>
+            <div class="col-8 my-2 px-2">
+              <div class="card align-self-center instagram-post-card">
+                <div class="card-header d-flex justify-content-between align-items-center py-3 px-3 text-center">
+                  <div><h4>Let´s do this!</h4></div>
+                  <div><span class="date">20/12</span></div>
+                </div>
+                <img class="card-img-top" src="https://picsum.photos/seed/320/240" alt="Card image">
+                <div class="card-body">
+                 <p class="card-text">
+                  <p><strong>321 Likes</strong></p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio.</p>
+                </div>
+             </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      
+
+ <!-- gallery -->
+      <div class="container-fluid collapse" id="gallery">
+        <div class="row g-2">
+          <div class="col-md-4 p-1">
+            <img class="img-fluid" src="https://picsum.photos/seed/picsum/400/400" />
+          </div>
+          <div class="col-md-4 p-1 ">
+            <img class="img-fluid" src="https://picsum.photos/400/400" />
+          </div>
+          <div class="col-md-4 p-1 ">
+            <img class="img-fluid" src="https://picsum.photos/400/400?grayscale"></img>
+          </div>
+        </div>
+        <div class="row g-2">
+          <div class="col-md-4 p-1 ">
+            <img class="img-fluid" src="https://loremflickr.com/400/400/dog" />
+          </div>
+          <div class="col-md-4 p-1 ">
+            <img class="img-fluid" src="https://picsum.photos/400/400/?blur" />
+          </div>
+          <div class="col-md-4 p-1 ">
+            <img class="img-fluid" src="https://picsum.photos/400/400" />
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-4 p-1 ">
+            <img class="img-fluid" src="https://loremflickr.com/400/400/travel" />
+          </div>
+          <div class="col-md-4 p-1 ">
+            <img class="img-fluid" src="https://loremflickr.com/400/400/brazil,rio " />
+          </div>
+          <div class="col-md-4 p-1 ">
+            <img class="img-fluid" src="https://loremflickr.com/g/400/400/tree " />
+          </div>
+        </div>
+
+      </div>
+
+  </div>
+  <!-- end -->
+  <!-- Optional JavaScript -->
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+    integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+    integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+    crossorigin="anonymous"></script>
+    <script src="main.js"></script>
 </body>
+
 </html>
