--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css">
-  <link rel="stylesheet" type="text/css" href="css/styles.css">
+  <link rel="stylesheet" type="text/css" href="styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,500&display=swap"
       rel="stylesheet">
+      <script type="text/javascript" href="main.js" ></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/js/all.min.js"
       integrity="sha512-rpLlll167T5LJHwp0waJCh3ZRf7pO6IT1+LZOhAyP6phAirwchClbTZV3iqL3BMrVxIYRbzGTpli4rfxsCK6Vw=="
       crossorigin="anonymous" referrerpolicy="no-referrer"></script>
@@ -52,12 +53,16 @@
                     <div class="modal-body">
                       <div class="form-group">
                         <label for="createCaption">Caption:</label>
-                        <textarea class="form-control" id="textCaption" rows="3" name="createCaption"></textarea>
+                        <textarea class="form-control" id="textCaption" rows="3" name="createCaption" placeholder="Add the caption of your post here"></textarea>
                       </div>
+                        <div class="container justify-content-start">
+                          <button class="btn btn-light btn-round border ms-0" type="button"><i class="fas fa-camera"></i></button>
+                          <button class="btn btn-light btn-round border" type="button"><i class="fas fa-location-dot"></i></button>
+                        </div>                          
                     </div>
                     <div class="modal-footer">
                       <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                      <button type="button" class="btn btn-primary">Save changes</button>
+                      <button type="button" class="btn btn-success">Publish</button>
                     </div>
                   </div>
                 </div>
@@ -65,9 +70,9 @@
               <!-- dropdown -->
               <div class="btn-group">
                 <button type="button" class="btn btn-secondary dropdown-toggle" style="margin-left: 5px;"
-                  data-bs-toggle="dropdown" data-bs-display="static" aria-expanded="false">
-                  <i class="fa-regular fa-gear"></i>
+                  data-bs-toggle="dropdown" data-bs-display="static" aria-expanded="false"><i class="fas fa-gear"></i>  
                 </button>
+                
                 <ul class="dropdown-menu dropdown-menu-sm-end">
                   <li><a class="dropdown-item" href="#">Profile</a></li>
                   <li><a class="dropdown-item" href="#">Accesibility</a></li>
@@ -85,14 +90,31 @@
 
       <!-- iconos gallery y Feed -->
       <div class="container ">
-        <nav class="navbar justify-content-center p-1">
-          <i class="fas fa-square text-primary"></i>
+        <nav class="nav justify-content-center ">
+          <i class="fas fa-table-cells" role="button" onclick=""></i>
+
+          <i class="fas fa-square px-2" role="button"></i>
         </nav>
       </div>
 
+      <ul class="nav nav-tabs">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">Active</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Link</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Link</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+        </li>
+      </ul>
+
     
       <!-- feed instagram post -->
-      <div class="container-fluid collapsein" id="feed">
+      <div class="container-fluid collapse show" id="feed">
         <div class="row ">
           <div class="card-group d-flex justify-content-center">
             <div class="col-8 my-2 px-2">
