--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                       <textarea class="form-control" id="textCaption" rows="3" name="createCaption"
                         placeholder="Add the caption of your post here"></textarea>
                     </div>
-                    <div class="container justify-content-start">
+                    <div class="container justify-content-start ps-0">
                       <button class="btn btn-light btn-round border ms-0" type="button"><i
                           class="fas fa-camera"></i></button>
                       <button class="btn btn-light btn-round border" type="button"><i
@@ -96,15 +96,11 @@
 
     <!-- iconos + gallery y Feed -->
     <nav>
-      <div class="nav nav-tabs d-flex justify-content-center" id="nav-tab" role="tablist">
-        <button class="nav-link active" id="nav-feed-tab" data-bs-toggle="tab" data-bs-target="#nav-feed" type="button" role="tab" aria-controls="nav-feed" aria-selected="true"><i class="fas fa-square"></i></button>
-        <button class="nav-link" id="nav-gallery-tab" data-bs-toggle="tab" data-bs-target="#nav-gallery" type="button" role="tab" aria-controls="nav-gallery" aria-selected="false"><i class="fa-solid fa-table-cells"></i></button>
+      <div class="nav nav-tabs d-flex justify-content-center border-0" id="nav-tab" role="tablist">
+        <button class="nav-link active border-0" id="nav-feed-tab" data-bs-toggle="tab" data-bs-target="#nav-feed" type="button" role="tab" aria-controls="nav-feed" aria-selected="true"><i class="fas fa-square"></i></button>
+        <button class="nav-link border-0" id="nav-gallery-tab" data-bs-toggle="tab" data-bs-target="#nav-gallery" type="button" role="tab" aria-controls="nav-gallery" aria-selected="false"><i class="fa-solid fa-table-cells"></i></button>
       </div>
     </nav>
-
-
-
-
     <div class="tab-content" id="nav-tabContent">
       <div class="container-fluid tab-pane fade show active" id="nav-feed" role="tabpanel" aria-labelledby="nav-feed-tab">
         <div class="row ">
@@ -171,8 +167,8 @@
           </div>
         </div>
       </div>
-      <div class="container tab-pane fade" id="nav-gallery" role="tabpanel" aria-labelledby="nav-gallery-tab">
-        <div class="row g-2">
+      <div class="container tab-pane fade mb-3" id="nav-gallery" role="tabpanel" aria-labelledby="nav-gallery-tab">
+        <div class="row g-1">
           <div class="col-md-4 p-1">
             <img class="img-fluid" src="https://picsum.photos/seed/picsum/400/400" />
           </div>
@@ -183,7 +179,7 @@
             <img class="img-fluid" src="https://picsum.photos/400/400?grayscale"></img>
           </div>
         </div>
-        <div class="row g-2">
+        <div class="row g-1">
           <div class="col-md-4 p-1 ">
             <img class="img-fluid" src="https://loremflickr.com/400/400/dog" />
           </div>
@@ -194,7 +190,7 @@
             <img class="img-fluid" src="https://picsum.photos/400/400" />
           </div>
         </div>
-        <div class="row g-2">
+        <div class="row g-1">
           <div class="col-md-4 p-1 ">
             <img class="img-fluid" src="https://loremflickr.com/400/400/travel" />
           </div>
