--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
     crossorigin="anonymous" />
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css">
-  <link rel="stylesheet" type="text/css" href="styles.css">
+  <link rel="stylesheet" type="text/css" href="styles.css"/>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,500&display=swap"
@@ -97,8 +97,8 @@
     <!-- iconos + gallery y Feed -->
     <nav>
       <div class="nav nav-tabs d-flex justify-content-center border-0" id="nav-tab" role="tablist">
-        <button class="nav-link active border-0" id="nav-feed-tab" data-bs-toggle="tab" data-bs-target="#nav-feed" type="button" role="tab" aria-controls="nav-feed" aria-selected="true"><i class="fas fa-square"></i></button>
-        <button class="nav-link border-0" id="nav-gallery-tab" data-bs-toggle="tab" data-bs-target="#nav-gallery" type="button" role="tab" aria-controls="nav-gallery" aria-selected="false"><i class="fa-solid fa-table-cells"></i></button>
+        <button class="nav-link border-0 active" id="nav-feed-tab" data-bs-toggle="tab" data-bs-target="#nav-feed" type="button" role="tab" aria-controls="nav-feed" aria-selected="true"><i class="fas fa-square "></i></button>
+        <button class="nav-link border-0" id="nav-gallery-tab" data-bs-toggle="tab" data-bs-target="#nav-gallery" type="button" role="tab" aria-controls="nav-gallery" aria-selected="false"><i class="fas fa-table-cells"></i></button>
       </div>
     </nav>
     <div class="tab-content" id="nav-tabContent">
