--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
     <div class="tab-content" id="nav-tabContent">
       <div class="container-fluid tab-pane fade show active" id="nav-feed" role="tabpanel" aria-labelledby="nav-feed-tab">
         <div class="row ">
-          <div class="card-group d-flex justify-content-center">
-            <div class="col-8 my-2 px-2">
+          <div class="card-group d-flex flex-column align-content-center">
+            <div class="col-4 my-2 px-2">
               <div class="card align-self-center instagram-post-card">
                 <div class="card-header d-flex justify-content-between align-items-center py-3 px-3 text-center">
                   <div>
@@ -125,7 +125,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-8 my-2 px-2">
+            <div class="col-4 my-2 px-2">
               <div class="card align-self-center instagram-post-card">
                 <div class="card-header d-flex justify-content-between align-items-center py-3 px-3 text-center">
                   <div>
@@ -144,8 +144,8 @@
                 </div>
               </div>
             </div>
-            <div class="col-8 my-2 px-2">
-              <div class="card align-self-center instagram-post-card">
+            <div class="col-4 my-2 px-2">
+              <div class="card align-self-center instagram-post-card ">
                 <div class="card-header d-flex justify-content-between align-items-center py-3 px-3 text-center">
                   <div>
                     <h4>Let´s do this!</h4>
